Fix link text getting cut off early. Updated manifest and pushed to Web Store.

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ a {
 
 .link {
   cursor: pointer;
-  max-width: 95%;
+  width: 95%;
 }
 
 .link-icon,
